Working on the Intresseorganisationer

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -53,7 +53,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
-	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+	<svg xmlns="https://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
 	  <symbol id="close-small" viewBox="0 0 11 11"><path d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z"/></symbol>
 	  <symbol id="arrow-left" viewBox="0 0 31 72"><path d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z"/></symbol>
@@ -98,13 +98,13 @@
 			<div class="left">
 				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
-		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="close"><svg><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
@@ -161,12 +161,12 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide fade kenBurns" id="">
+	<section class="slide fade" id="">
 		<div class="content">
-			<div class="container" style="height: 560px;padding-top: 5%;">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<h1>Dokument</h1>
+						<h1 style="padding-top: 5%;">Dokument</h1>
 						<p>
 							Nedan kan du läsa viktiga dokument och artiklar gällande besiktningar.
 						</p>
@@ -178,7 +178,7 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/library.jpg)"></div>
 	</section>
 	<!-- Slide #24 -->
-	<section class="slide whiteSlide kenBurns" id="aboutUs">
+	<section class="slide whiteSlide kenBurns" id="documentSlide">
 		<div class="content">
 			<div class="container container-lg">
 				<div class="wrap">
@@ -288,7 +288,7 @@
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://foreningenbkk.se" target="_blank" class="box-74">
+	              <a href="https://foreningenbkk.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/bkk_logo.png" class="center center-m-down" alt="Byggandets kontraktskommitté"/>
 	                </div>
@@ -302,7 +302,7 @@
 	            </li>
 							<!-- info card 2 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://bkr.se" target="_blank" class="box-74">
+	              <a href="https://bkr.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/bkr_logo.png" class="center center-m-down" alt="Byggkeramikrådet"/>
 	                </div>
@@ -316,7 +316,7 @@
 	            </li>
 							<!-- info card 3 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://gvk.se" target="_blank" class="box-74">
+	              <a href="https://gvk.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/gvk_logo.png" class="center center-m-down" alt="Golvbranschens Våtrumskontroll"/>
 	                </div>
@@ -391,7 +391,7 @@
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-10 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://gar-bo.se" target="_blank" class="box-74">
+	              <a href="https://gar-bo.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/garbo_logo.png" class="center center-m-down" alt="GAR-BO"/>
 	                </div>
@@ -411,7 +411,7 @@
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
-	                    <p class="micro margin-0 text-blue">Nordic Försäkring <br> och Riskhantering</p>
+	                    <p class="micro margin-0 text-blue">Nordic Försäkring</p>
 											<br>
 	                  </div>
 	                </div>
@@ -419,12 +419,12 @@
 	            </li>
 							<!-- info card 3 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://protectorforsakring.se" target="_blank" class="box-74">
+	              <a href="https://protectorforsakring.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/protector_logo.png" class="center center-m-down" alt="Protector Försäkring"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
-	                    <p class="micro margin-0 text-blue center">Protector <br> Försäkring</p>
+	                    <p class="micro margin-0 text-blue center">Protector Försäkring</p>
 	                </div>
 	              </a>
 	            </li>
@@ -434,25 +434,108 @@
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://boverket.se" target="_blank" class="box-74">
+	              <a href="https://advokatsamfundet.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/" class="center center-m-down" alt="GAR-BO"/>
+	                  <img src="../assets/img/logos/dokument/advokatsamfundet_logo.png" class="center center-m-down" alt="Advokatsamfundet"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
-	                    <p class="micro margin-0 text-blue">x</p>
+	                    <p class="micro margin-0 text-blue">Advokatsamfundet</p>
 											<br>
 	                  </div>
 	                </div>
 	              </a>
 	            </li>
-
+							<!-- info card 2 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://spef.org" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/spef_logo.png" class="center center-m-down" alt="Branschföreningen för murat och putsat byggande - SPEF"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">SPEF</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 3 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://golvbranschen.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/golvbranschen_logo.png" class="center center-m-down" alt="Golvbranschen, GBR"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Golvbranschen, GBR</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 3 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://installatorsforetagen.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/installatorsforetagen_logo.png" class="center center-m-down" alt="Installatörsföretagen"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Installatörsföretagen</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 4 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="http://maklarsamfundet.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/maklarsamfundet_logo.png" class="center center-m-down" alt="Mäklarsamfundet"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Mäklarsamfundet</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 5 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://pvforetagen.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/pvforetagen_logo.png" class="center center-m-down" alt="Plåt och ventilationsföretagen"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Plåt & ventilationsföretagen</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 6 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.sbr.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/sbr_logo.png" class="center center-m-down" alt="SBR Byggingenjörerna"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">SBR Byggingenjörerna</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
 						</ul>
 						<h3>Myndigheter</h3>
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://boverket.se" target="_blank" class="box-74">
+	              <a href="https://boverket.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/boverket_logo.png" class="center center-m-down" alt="GAR-BO"/>
 	                </div>
@@ -466,7 +549,7 @@
 	            </li>
 							<!-- info card 2 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://elsakerhetsverket.se" target="_blank" class="box-74">
+	              <a href="https://elsakerhetsverket.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/elsakerhetsverket_logo.png" class="center center-m-down" alt="Elsäkerhetsverket"/>
 	                </div>
@@ -480,7 +563,7 @@
 	            </li>
 							<!-- info card 3 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://konsumentverket.se" target="_blank" class="box-74">
+	              <a href="https://konsumentverket.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/konsumentverket_logo.png" class="center center-m-down" alt="Konsumentverket"/>
 	                </div>
@@ -491,7 +574,7 @@
 	            </li>
 							<!-- info card 4 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://riksdagen.se" target="_blank" class="box-74">
+	              <a href="https://riksdagen.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/riksdagen_logo.png" class="center center-m-down" alt="Riksdagen"/>
 	                </div>
@@ -505,13 +588,27 @@
 						<ul class="grid grid-74 later equal left">
 							<!-- info card 1 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="http://boverket.se" target="_blank" class="box-74">
+	              <a href="https://lmlaw.se" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/" class="center center-m-down" alt="GAR-BO"/>
+	                  <img src="../assets/img/logos/dokument/lmlaw_logo.png" class="center center-m-down" alt="Lindskog Malmström Advokatbyrå"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
-	                    <p class="micro margin-0 text-blue">x</p>
+	                    <p class="micro margin-0 text-blue">Lindskog Malmström Advokatbyrå</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 2 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://marlaw.se" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/marlaw_logo.png" class="center center-m-down" alt="Advokatfirman Marlaw AB"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Advokatfirman <br>Marlaw AB</p>
 											<br>
 	                  </div>
 	                </div>
@@ -568,7 +665,7 @@
 				</div>
 			</div>
 		</div>
-		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
+		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="https://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
 	</section>
 	<!-- ispect details Popup Text -->
 	<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
