Removed unused class

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -139,7 +139,7 @@
 
 
 	<!-- HEADER -->
-	<section class="slide fade kenBurns" id="">
+	<section class="slide fade" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
