updated the site with links to bm newsletter

--- a/index.html
+++ b/index.html
@@ -631,10 +631,16 @@
 							<div class="dialogContent">
 								<ul class="text-center left">
 									<li>
+										<p class="micro text-blueGrey margin-0 padding-0">2018-04-11</p>
+										<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71" target="_blank" class="text-blue bold small">
+											Förstörelsen av Pålsundet
+										</a>
+									</li>
+									<li>
 										<p class="micro text-blueGrey margin-0 padding-0">2017-12-13</p>
 										<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true" target="_blank" class="text-blue bold small">
-													Nu samlar vi kraft för 2018!
-											</a>
+											Nu samlar vi kraft för 2018!
+										</a>
 									</li>
 								</ul>
 							</div>
