--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -183,6 +183,9 @@
 								Nyhetsbrevet Byggintelligens
 							</h3>
 							<div class="margin-left-2">
+								<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Förstörelsen av Pålsundet</p>
+								</a>
 								<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
 									<p class="micro bold text-blue" style="margin-top: 15px;">Nu samlar vi kraft för 2018!</p>
 								</a>
