Still updating company lists in docs

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -510,7 +510,7 @@
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
-	                    <p class="micro margin-0 text-blue">Plåt & ventilationsföretagen</p>
+	                    <p class="micro margin-0 text-blue">Plåt & ventföretagen</p>
 											<br>
 	                  </div>
 	                </div>
@@ -525,6 +525,104 @@
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
 	                    <p class="micro margin-0 text-blue">SBR Byggingenjörerna</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 7 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.stockholmsbf.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/stockholmbf_logo.png" class="center center-m-down" alt="Stockholms Byggmästareförening"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Byggmästareförening</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 8 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.svenskforsakring.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/svenskforsakring_logo.png" class="center center-m-down" alt="Svensk Försäkring"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Svensk Försäkring</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 9 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.sbuf.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/sbuf_logo.png" class="center center-m-down" alt="Svenska byggbranschens utvecklingsfond"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">SBUF</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 10 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.sbsvensktnaringsliv.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/svensktnaringsliv_logo.png" class="center center-m-down" alt="Svenskt Näringsliv"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Svenskt Näringsliv</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 11 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.sverigesbyggindustrier.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/sverigesbyggindustrier_logo.png" class="center center-m-down" alt="Sveriges Byggindustrier"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Sveriges Byggindustrier</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 12 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.tib.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/takentreprenorerna_logo.png" class="center center-m-down" alt="Tak och tätskiktsentreprenörernas branschorganisation i sverige"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Takentreprenörerna</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 12 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.tib.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/takentreprenorerna_logo.png" class="center center-m-down" alt="Trä-och möbelföretagen"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Trä-och möbelföretagen</p>
 											<br>
 	                  </div>
 	                </div>
@@ -608,7 +706,7 @@
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
-	                    <p class="micro margin-0 text-blue">Advokatfirman <br>Marlaw AB</p>
+	                    <p class="micro margin-0 text-blue">Advokatfirman <br>Marlaw</p>
 											<br>
 	                  </div>
 	                </div>
