doc company list complete, for now

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -602,7 +602,7 @@
 	            </li>
 							<!-- info card 12 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://www.tib.se/" target="_blank" class="box-74">
+	              <a href="http://www.tib.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
 	                  <img src="../assets/img/logos/dokument/takentreprenorerna_logo.png" class="center center-m-down" alt="Tak och tätskiktsentreprenörernas branschorganisation i sverige"/>
 	                </div>
@@ -616,13 +616,41 @@
 	            </li>
 							<!-- info card 12 -->
 	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
-	              <a href="https://www.tib.se/" target="_blank" class="box-74">
+	              <a href="http://www.tmf.se/" target="_blank" class="box-74">
 	                <div class="thumbnail-74">
-	                  <img src="../assets/img/logos/dokument/takentreprenorerna_logo.png" class="center center-m-down" alt="Trä-och möbelföretagen"/>
+	                  <img src="../assets/img/logos/dokument/tmf_logo.png" class="center center-m-down" alt="Trä-och möbelföretagen"/>
 	                </div>
 	                <div class="name-74 equalElement table wide">
 	                  <div class="cell">
 	                    <p class="micro margin-0 text-blue">Trä-och möbelföretagen</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 13 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.villaagarna.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/villaagrna_logo.png" class="center center-m-down" alt="Villaägarnas Riksförbund"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">Villaägarna</p>
+											<br>
+	                  </div>
+	                </div>
+	              </a>
+	            </li>
+							<!-- info card 14 -->
+	            <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter" style="width: 25%">
+	              <a href="https://www.vvsfabrikanterna.se/" target="_blank" class="box-74">
+	                <div class="thumbnail-74">
+	                  <img src="../assets/img/logos/dokument/vvsfabrikanterna_logo.png" class="center center-m-down" alt="Villaägarnas Riksförbund"/>
+	                </div>
+	                <div class="name-74 equalElement table wide">
+	                  <div class="cell">
+	                    <p class="micro margin-0 text-blue">VVS Fabrikanternas Råd</p>
 											<br>
 	                  </div>
 	                </div>
