--- a/404/index.html
+++ b/404/index.html
@@ -2,26 +2,26 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | 404</title>
+	<title>Besiktningsman.se | 404 - Sidan finns inte</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="404 - Sidan finns inte. Gå tillbaka till huvudsidan för att komma vidare." />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="https://www.besiktningsman.se/nyheter" />
+	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Nyheter från Besiktningsman.se" />
-	<meta property="og:url" content="https://www.besiktningsman.se/nyheter" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
-	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
+	<meta property="og:title" content="Sidan du besökte finns inte." />
+	<meta property="og:description" content="404. Gå tillbaka till huvudsidan för att komma vidare." />
+	<meta property="og:url" content="https://www.besiktningsman.se/404" />
+	<meta property="og:site_name" content="Besiktningsman.se | 404 - Sidan finns inte">
+	<meta property="og:image" content="../assets/img/backgrounds/404.jpg" />
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:description" content="404 - Sidan finns inte. Gå tillbaka till huvudsidan för att komma vidare." />
+	<meta name="twitter:title" content="Sidan du besökte finns inte." />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -215,11 +215,8 @@
 				<div class="wrap">
 
 					<div class="fix-10-12">
+						<p class="small bold">404</p>
 						<h1>Verkar som sidan du <br>söker inte finns :(</h1>
-						<a href="/" class="common-Button white text-blue fromCenter">Till startsidan</a>
-						<br>
-						<br>
-						<a class="text-blue" href="../kontakt/">Kontakta oss</a>
 					</div>
 
 				</div>
