--- a/projekt/index.html
+++ b/projekt/index.html
@@ -150,7 +150,7 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide whiteSlide" id="landingHeader">
+	<section class="slide whiteSlide">
 		<div class="content">
 			<div class="container" style="height:560px;">
 				<!-- contents -->
