Helhetskoncept-link fix

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h2 class="small">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
-								<a href="/helhetskoncept/">
+								<a href="helhetskoncept/">
 									<ul>
 										<li>
 											<p class="small">Det ger er:</p>
