--- a/dokument/index.html
+++ b/dokument/index.html
@@ -216,11 +216,13 @@
 									<div class="content">
 										<div class="cover">
 											<img
-												src="../assets/img/backgrounds/brf_sb_cover.png"
-												title="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas. "
-												alt="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas."
-												height="280" width="300"
-												rel="nofollow"
+												src="../assets/img/backgrounds/brf_sb_cover.svg"
+												title="Hur går en slutbesiktning till?
+När besiktningsmannen har skickat slutbesiktningsutlåtandet, vilket är ett juridiskt dokument, så är hans uppdrag avslutat.
+Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig om hur fel skall avhjälpas eller konsultera part om en utförd besiktning. "
+												alt="Hur går en slutbesiktning till?"
+												height="280"
+												width="300"
 												>
 										</div>
 									</div>
@@ -232,11 +234,14 @@
 									<div class="content">
 										<div class="cover">
 											<img
-											src="../assets/img/backgrounds/brf_eb_cover.png"
-											title="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
-											alt="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
-											height="280" width="300"
-											rel="nofollow"
+												src="../assets/img/backgrounds/brf_eb_cover.svg"
+												title="Hur fungerar en efterbesiktning?
+Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas.
+Besiktningsmannen skall beredas tillträde till lägenheten, om Brf-inne-havare inte har möjlighet att närvara skall låset stå i serviceläge alternativt skall Brf-representanten inneha nyckel för att möjliggöra besiktning.
+Representant för Brf-styrelsen skall deltaga under hela besiktningen, besiktningsman går ej in i lägenhet vid serviceläge om inte representant är närvarande."
+												alt="Hur fungerar en efterbesiktning?"
+												height="280"
+												width="300"
 												>
 										</div>
 									</div>
@@ -244,15 +249,21 @@
 							</li>
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" class="card" target="_blank">
+								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" class="card" target="_blank">
 									<div class="content">
 										<div class="cover">
 											<img
-											src="../assets/img/backgrounds/brf_eb_cover.png"
-											title="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
-											alt="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
-											height="280" width="300"
-											rel="nofollow"
+												src="../assets/img/backgrounds/brf_ssb_cover.svg"
+												title="Hur fungerar en särskild besiktning?
+Besiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas.
+Besiktningsmannen skall beredas tillträde för att möjliggöra besiktning. Om tillträde ej ges betraktas felen som avhjälpta.
+Parter skall deltaga under hela besiktningen,
+om beställaren (konsumenten) ej kan deltaga och väljer ett ombud,
+skall detta vara befullmäktigat att föra talan.
+												"
+												alt="Hur fungerar en särskild besiktning?"
+												height="280"
+												width="300"
 												>
 										</div>
 									</div>
@@ -269,9 +280,11 @@
 										<div class="cover">
 											<img
 											src="../assets/img/backgrounds/hantverkarformularet14_cover.png"
-											title="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
-											alt="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
-											height="280" width="300"
+											title="Hantverkarformuläret 14
+Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
+											alt="Hantverkarformuläret 14"
+											height="280"
+											width="300"
 											rel="nofollow"
 												>
 										</div>
@@ -284,9 +297,11 @@
 										<div class="cover">
 											<img
 											src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png"
-											title="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
-											alt="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
-											height="280" width="300"
+											title="Besiktningsmannaboken 2016
+Handbok för besiktningar av nybyggda småhus"
+											alt="Besiktningsmannaboken 2016"
+											height="280"
+											width="300"
 											rel="nofollow"
 												>
 										</div>
@@ -299,9 +314,11 @@
 										<div class="cover">
 											<img
 											src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png"
-											title="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
-											alt="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
-											height="280" width="300"
+											title="Konsumenttjänstlagen SFS 1985:716
+Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
+											alt="Konsumenttjänstlagen SFS 1985:716 - Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
+											height="280"
+											width="300"
 											rel="nofollow"
 												>
 										</div>
