--- a/dokument/index.html
+++ b/dokument/index.html
@@ -212,12 +212,13 @@
 						<ul class="grid grid-74 later equal left margin-top-5">
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
 											<img
 												src="../assets/img/backgrounds/brf_sb_cover.svg"
 												title="Hur går en slutbesiktning till?
+
 När besiktningsmannen har skickat slutbesiktningsutlåtandet, vilket är ett juridiskt dokument, så är hans uppdrag avslutat.
 Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig om hur fel skall avhjälpas eller konsultera part om en utförd besiktning. "
 												alt="Hur går en slutbesiktning till?"
@@ -230,15 +231,18 @@ Besiktningsmannen är objektiv samt opartisk och får därför inte uttala sig o
 							</li>
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
 											<img
 												src="../assets/img/backgrounds/brf_eb_cover.svg"
 												title="Hur fungerar en efterbesiktning?
+
 Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas.
-Besiktningsmannen skall beredas tillträde till lägenheten, om Brf-inne-havare inte har möjlighet att närvara skall låset stå i serviceläge alternativt skall Brf-representanten inneha nyckel för att möjliggöra besiktning.
-Representant för Brf-styrelsen skall deltaga under hela besiktningen, besiktningsman går ej in i lägenhet vid serviceläge om inte representant är närvarande."
+Besiktningsmannen skall beredas tillträde till lägenheten,
+om Brf-inne-havare inte har möjlighet att närvara skall låset stå i serviceläge alternativt skall Brf-representanten inneha nyckel för att möjliggöra besiktning.
+Representant för Brf-styrelsen skall deltaga under hela besiktningen,
+besiktningsman går ej in i lägenhet vid serviceläge om inte representant är närvarande."
 												alt="Hur fungerar en efterbesiktning?"
 												height="280"
 												width="300"
@@ -249,14 +253,15 @@ Representant för Brf-styrelsen skall deltaga under hela besiktningen, besiktnin
 							</li>
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" class="card blue" target="_blank">
+									<div class="content blue">
+										<div class="cover blue">
 											<img
 												src="../assets/img/backgrounds/brf_ssb_cover.svg"
 												title="Hur fungerar en särskild besiktning?
 Besiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas.
-Besiktningsmannen skall beredas tillträde för att möjliggöra besiktning. Om tillträde ej ges betraktas felen som avhjälpta.
+Besiktningsmannen skall beredas tillträde för att möjliggöra besiktning.
+Om tillträde ej ges betraktas felen som avhjälpta.
 Parter skall deltaga under hela besiktningen,
 om beställaren (konsumenten) ej kan deltaga och väljer ett ombud,
 skall detta vara befullmäktigat att föra talan.
@@ -275,9 +280,9 @@ skall detta vara befullmäktigat att föra talan.
 						<ul class="grid grid-74 later equal left margin-top-5">
 
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" class="card" style="background: #44266a;" target="_blank">
+									<div class="content" style="background: #44266a;">
+										<div class="cover" style="background: #44266a;">
 											<img
 											src="../assets/img/backgrounds/hantverkarformularet14_cover.png"
 											title="Hantverkarformuläret 14
@@ -292,9 +297,9 @@ Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten dä
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" class="card" style="background: #f7fafc;" target="_blank">
+									<div class="content" style="background: #f7fafc;">
+										<div class="cover" style="background: #f7fafc;">
 											<img
 											src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png"
 											title="Besiktningsmannaboken 2016
@@ -309,9 +314,9 @@ Handbok för besiktningar av nybyggda småhus"
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done" style="width: 28%">
-								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" class="card" target="_blank">
-									<div class="content">
-										<div class="cover">
+								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" class="card" style="background: #172663;" target="_blank">
+									<div class="content" style="background: #172663;">
+										<div class="cover" style="background: #172663;">
 											<img
 											src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png"
 											title="Konsumenttjänstlagen SFS 1985:716
