--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/winter/sodermalm_winter.jpg)" alt="Foto av Södermälarstrand, Södermalm, Stockholm"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg);min-height: 80vh;" alt="Foto av Södermälarstrand, Södermalm, Stockholm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
 	<section class="slide whiteSlide fromLeft autoHeight" id="enterprise">
@@ -416,7 +416,7 @@
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/summer/summer_apartments.jpg" alt="Foto av en BRFs fasad" />
 							</li>
 						</ul>
 					</div>
@@ -458,7 +458,7 @@
 								</a>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_house.jpg" alt="Vintrigt hus på landet" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/summer/summer_house.jpg" alt="Traditionellt sommarhus i svenska skärgården" />
 							</li>
 						</ul>
 					</div>
