Entered the final stages of the new service sub page

--- a/tjanster/entreprenad/förbesiktning/index.html
+++ b/tjanster/entreprenad/förbesiktning/index.html
@@ -179,59 +179,57 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight blue" data-name="home" id="entreprenad-header">
-		<div class="content">
-			<div class="container" style="height: 260px !important;">
-				<div class="wrap">
-
-					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Förbesiktning</h1>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="slide whiteSlide autoHeight">
+	<div class="StripeBackground">
+	    <div class="stripe s0"></div>
+	    <div class="stripe s2"></div>
+	    <div class="stripe s3"></div>
+	    <div class="stripe s4"></div>
+	</div>
 
 	</section>
-	<section class="slide whiteSlide autoHeight" id="entreprenad-services">
+	<section class="slide whiteSlide autoHeight" id="entreprenad-services" style="background: transparent !important;">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 left margin-top-1 margin-bottom-2">
 						<ul>
-							<li class="col-5-12">
-								<h2 class="margin-bottom-1">
-									Förbesiktning kan ske när som helst under byggprocessen om någon part önskar det.
-									<p>
-										Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår att besikta eller felavhjälpa,
-										om man väntar till efter färdigställandet.
-									</p>
-								</h2>
+							<li class="col-5-12" style="max-width:750px;margin: 0 auto;">
+								<div class="bread-crumbs">
+							    <a href="../../entreprenad/">Entreprenad<i class="icono-arrow2-left"></i></a>
+							    <span class="bread-crumbs-title xs-hide">Förbesiktning</span>
+							  </div>
+								<h2 class="common-IntroText">Förbesiktning kan ske när som helst under byggprocessen om någon part önskar det.</h2>
 								<p>
-									Besiktningsman.se erbjuder förbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 (se nedan). Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt. Vi erbjuder
-									även komplett besiktningsgrupp.
-								</p>
-								<p>
-									Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats. Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.
-								</p>
-								<p>
-									Förbesiktning kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster.
+									Skälet kan exempelvis vara att någon del av entreprenaden kan bli svår att besikta eller felavhjälpa,
+									om man väntar till efter färdigställandet.
 									<br>
-									<br> Pris offereras separat.
+									<br>
+									Besiktningsman.se erbjuder förbesiktning för nyproduktion och ROT enligt regelverken AB04 och ABT 06 kap 7 (se nedan).
+									Besiktningen utförs av opartiska besiktningsmän godkända av SBR med särskild fackkompetens för aktuellt besiktningsobjekt.
+									Vi erbjuderäven komplett besiktningsgrupp.
+									<br>
+									<br>
+									Besiktningen utförs okulärt och dokumenteras digitalt av besiktningsmannen på plats.
+									Felbilaga finns tillgänglig omgående efter besiktningen och komplett utlåtande levereras inom 3 arbetsdagar.
+									<br>
+									<br>
+									Förbesiktning kan beställas som en enstaka tjänst eller ingå i en paketlösning med flera besiktningstjänster. Pris offereras separat.
 								</p>
-								<p class="bold margin-bottom-1">Enligt AB04 och ABT06 Kap 7 §1 har part rätt att påkalla förbesiktning om</p>
+								<p class="cta-headline bold">Enligt AB04 och ABT06 Kap 7 §1 har part rätt att påkalla förbesiktning om:</p>
 								<p>
 									<b>1</b> arbete efter färdigställandet av entreprenaden inte är eller inte utan väsentligt ingrepp blir åtkomligt för besiktning.
+									<br>
+									<b>2</b> avhjälpande av fel i arbete efter färdigställande skulle vara till väsentlig olägenhet för parten
+									<br>
+									<b>3</b> arbete före färdigställande tas i bruk av beställaren eller
+									<br>
+									<b>4</b> i övrigt särskilda skäl föreligger
 								</p>
+								<p class="cta-headline bold">Kommentar till kap 7 §1 i AB04 och ABT06, </p>
 								<p>
-									<b>2</b> avhjälpande av fel i arbete efter färdigställande skulle vara till väsentlig olägenhet för parten</p>
-								<p>
-									<b>3</b> arbete före färdigställande tas i bruk av beställaren eller</p>
-								<p>
-									<b>4</b> i övrigt särskilda skäl föreligger</p>
-								<p class="quotes">”Kommentar till kap 7 §1 i AB04 och ABT06, Ett särskilt skäl för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer i ett stort antal eller gäller
-									principer eller kvalitetskrav för utförandet, sk normerande besiktning.”</p>
+									"Ett särskilt skäl för förbesiktning kan vara att parterna i förväg vill få besiktningsmannens
+									bedömning av kontraktsenhetligheten av visst arbete som antingen återkommer i ett stort antal eller gäller
+									principer eller kvalitetskrav för utförandet, sk normerande besiktning.”
+								</p>
 							</li>
 						</ul>
 				</div>
@@ -240,41 +238,59 @@
 	</section>
 	<section class="slide white form-section">
 		<div class="container-lg">
-			<div class="form-column" id="">
-				<div class="form-container float-left">
-						<h3 class="pad-header margin-0 text-blueGrey center">
-							Redo att boka?
-							<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-						</h3>
-					<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-footer=true style="width: 100%; height:400px;"></div>
-					<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-				</div>
+			<div class="formBackground form-column float-left">
+					<h3 class="pad-header margin-0 text-blueGrey center">
+						Redo att boka?
+						<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+					</h3>
+					<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" style="width: 100%; height: 400px;">
+					</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
 					<p class="copy-1 float-left">Du är i gott sällskap.</p>
-					<p class="copy-2 float-left">Gör som många andra och sammarbeta med Besiktningsman.se</p>
+					<p class="copy-2 float-left">Gör som många andra och samarbeta med Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="">
+							<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 						</li>
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="">
+							<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
 						</li>
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="">
+							<img src="../../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 						</li>
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="">
+							<img src="../../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
 						</li>
 						<li class="customer-logo">
-							<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="">
+							<img src="../../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
+<section class="ctas">
+  <div class="container-lg">
+    <div class="cta general-queries">
+      <div class="copy-column">
+        <h4 class="cta-headline">Generella frågor</h4>
+        <p class="cta-copy">Gå till vår <a href="../../../kontakt/" class="common-Link">kontaktsida</a> och lämna till ett meddelande.</p>
+      </div>
+    </div>
+    <div class="cta support">
+      <div class="copy-column">
+        <h4 class="cta-headline">Telefon</h4>
+        <p class="cta-copy">
+					Ni kan även ringa vår växel
+					mellan 08:30 och 17:00
+					på: <a href="tel:0101654000" class="common-Link">010-165 40 00</a>
+				</p>
+      </div>
+    </div>
+  </div>
+</section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
 		<div class="content">
