updated blog post links

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -184,6 +184,9 @@
 								Besiktningsbloggen
 							</h3>
 							<div class="margin-left-2">
+								<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Har du byggkort?!</p>
+								</a>
 								<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90">
 									<p class="micro bold text-blue" style="margin-top: 15px;">Dags att sluta subventionera byggfel!</p>
 								</a>
