--- a/tjanster/entreprenad/förbesiktning/index.html
+++ b/tjanster/entreprenad/förbesiktning/index.html
@@ -190,7 +190,7 @@
 	<section class="slide whiteSlide autoHeight" id="entreprenad-services" style="background: transparent !important;">
 		<div class="container">
 			<div class="container-lg">
-				<div class="fix-10-12 left margin-top-1 margin-bottom-2">
+				<div class="fix-10-12 left margin-top-1 margin-bottom-2 service-text">
 						<ul>
 							<li class="col-5-12" style="max-width:750px;margin: 0 auto;">
 								<div class="bread-crumbs">
